--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <div class="contact__item">
               <i class="fas fa-envelope"></i>
               <h3>Email</h3>
-              <p>despinakarp@gmail.com</p>
+              <p>despina.karp@gmail.com</p>
             </div>
             <div class="contact__item">
               <i class="fas fa-clock"></i>
@@ -214,7 +214,7 @@
           <p>Εξειδικευμένες υπηρεσίες Πολιτικού Μηχανικού με έμφαση στην ποιότητα και την ασφάλεια</p>
           <div class="footer__contact">
             <p><i class="fas fa-phone"></i> 694 255 3295</p>
-            <p><i class="fas fa-envelope"></i> despinakarp@gmail.com</p>
+            <p><i class="fas fa-envelope"></i> despina.karp@gmail.com</p>
             <p><i class="fas fa-map-marker-alt"></i> Φρίξου 10, Νέα Ιωνία</p>
           </div>
         </div>
@@ -232,7 +232,7 @@
         <div class="footer__social">
           <h3>Επικοινωνία</h3>
           <div class="social-links">
-            <a href="mailto:despinakarp@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
+            <a href="mailto:despina.karp@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
             <a href="tel:+306942553295" aria-label="Τηλέφωνο"><i class="fas fa-phone"></i></a>
             <a href="https://gr.linkedin.com/in/despoina-karpouzli-b70808176" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
           </div>
